3 more revolts in Iran = )

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -757,6 +757,8 @@ BKV;Bukovina;;;;;;;;;;;;;
 BKV_ADJ;Bukovinian;;;;;;;;;;;;;
 BLC;Baluchistan;;;;;;;;;;;;;
 BLC_ADJ;Baluchi;;;;;;;;;;;;;
+BLC_prov_gov_conservative;Hassan Ali Shah;;;;;;;;;;;;;
+BLC_prov_gov_conservative_ADJ;Kermani;;;;;;;;;;;;;
 BLZ;Belize;;;;;;;;;;;;;
 BLZ_ADJ;Belizean;;;;;;;;;;;;;
 BNG;Bangladesh;;;;;;;;;;;;;
