--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3903,9 +3903,9 @@ TPT_prussian_constitutionalism_ADJ;Uteteran;;;;;;;;;;;;;
 TPT_hms_government_ADJ;Uteteran;;;;;;;;;;;;;
 TPT_theocracy;Ujiji;;;;;;;;;;;;;
 TPT_theocracy_ADJ;Ujiji;;;;;;;;;;;;;
-YEM_absolute_monarchy;Sultanate of Lahej;;;;;;;;;;;;;
-YEM_prussian_constitutionalism;Sultanate of Lahej;;;;;;;;;;;;;
-YEM_hms_government;Sultanate of Lahej;;;;;;;;;;;;;
+YEM_absolute_monarchy;The Sultanate of Lahej;;;;;;;;;;;;;
+YEM_prussian_constitutionalism;The Sultanate of Lahej;;;;;;;;;;;;;
+YEM_hms_government;The Sultanate of Lahej;;;;;;;;;;;;;
 YEM_absolute_monarchy_ADJ;Yemeni;;;;;;;;;;;;;
 YEM_prussian_constitutionalism_ADJ;Yemeni;;;;;;;;;;;;;
 YEM_hms_government_ADJ;Yemeni;;;;;;;;;;;;;
