--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -40,8 +40,9 @@ KHT;Qa'inat;;;;;;;;;;;;;
 KHT_ADJ;Qa'inati;;;;;;;;;;;;;
 KHT_colonial_company;Khozeimeh Amirdom;;;;;;;;;;;;;
 KHT_colonial_company_ADJ;Khozeimegi;;;;;;;;;;;;;
-MKU;Jelali;;;;;;;;;;;;;
-MKU_ADJ;Jelali;;;;;;;;;;;;;
+MKU;The Maku Khanate;;;;;;;;;;;;;
+MKU_ADJ;Bayat;;;;;;;;;;;;;
+MKU;Bayatlar;;;;;;;;;;;;;
 SHD;Shadlu;;;;;;;;;;;;;
 SHD_ADJ;Shadluyi;;;;;;;;;;;;;
 MLN_colonial_company;Milan;;;;;;;;;;;;;
