--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -42,7 +42,7 @@ KHT_colonial_company;Khozeimeh Amirdom;;;;;;;;;;;;;
 KHT_colonial_company_ADJ;Khozeimegi;;;;;;;;;;;;;
 MKU;The Maku Khanate;;;;;;;;;;;;;
 MKU_ADJ;Bayat;;;;;;;;;;;;;
-MKU;Bayatlar;;;;;;;;;;;;;
+MKU_conservative;Bayatlar;;;;;;;;;;;;;
 SHD;Shadlu;;;;;;;;;;;;;
 SHD_ADJ;Shadluyi;;;;;;;;;;;;;
 MLN_colonial_company;Milan;;;;;;;;;;;;;
