--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3436,6 +3436,12 @@ DNN_constitutional_empire_ADJ;Norwegian-Danish;;;;;;;;;;;;;
 DNN_semi_constitutional_empire;Norway-Denmark;;;;;;;;;;;;;
 DNN_semi_constitutional_empire_ADJ;Norwegian-Danish;;;;;;;;;;;;;
 DNN_democracy;Scandinavian Republic;;;;;;;;;;;;;
+SWE_absolute_empire;Sweden-Norway;;;;;;;;;;;;;
+SWE_semi_constitutional_empire;Sweden-Norway;;;;;;;;;;;;;
+SWE_constitutional_empire;Sweden-Norway;;;;;;;;;;;;;
+SWE_absolute_empire_ADJ;Swedish-Norwegian;;;;;;;;;;;;;
+SWE_semi_constitutional_empire_ADJ;Swedish-Norwegian;;;;;;;;;;;;;
+SWE_constitutional_empire_ADJ;Swedish-Norwegian;;;;;;;;;;;;;
 LUS;Lusatia;;;;;;;;;;;;;
 LUS_ADJ;Lusatian;;;;;;;;;;;;;
 DOR;Dortmund;;;;;;;;;;;;;
