--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -166,7 +166,7 @@ PROV3508;Pishukan;;;;;;;;;;;;;
 PROV3509;Sandak;;;;;;;;;;;;;
 PROV3510;Kacchi;;;;;;;;;;;;;
 PROV3511;Zaranj;;;;;;;;;;;;;
-PROV3512;Dozdab;;;;;;;;;;;;;
+PROV3512;Bampur;;;;;;;;;;;;;
 PROV3513;Nad-i Ali;;;;;;;;;;;;;
 PROV3514;Panjdeh;;;;;;;;;;;;;
 PROV3515;Dubai;;;;;;;;;;;;;
@@ -198,9 +198,9 @@ PROV1055;Shali;;;;;;;;;;;;;
 PROV4194;Qal'eh-ye Naw;;;;;;;;;;;;;
 RUS_1102;Shirvan;;;;;;;;;;;;;
 AZB_1105;Arran;;;;;;;;;;;;;
-PER_1112;Âzarbaîejân-e Šarqî;;;;;;;;;;;;;
+PER_1112;Âzarbâîejân-e Šarqî;;;;;;;;;;;;;
 PER_3353;Qa'enât;;;;;;;;;;;;;
-PER_3350;Âzarbaîejân-e Gharbî;;;;;;;;;;;;;
+PER_3350;Âzarbâîejân-e Gharbî;;;;;;;;;;;;;
 PER_1122;Kordestân;;;;;;;;;;;;;
 PER_1127;'Arâq-e Ajamî-e Jonûbî;;;;;;;;;;;;;
 PER_1121;'Arâq-e Ajamî-e Šomâlî;;;;;;;;;;;;;
