--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1305,9 +1305,17 @@ KAM_socialist;The Socialists;Faction socialiste;Die sozialistische Fraktion;;;;;
 KAM_communist;The Communists;Faction communiste;Die kommunistische Fraktion;;;;;;;;;;;
 KAM_fascist;The Nationalists;Faction fasciste;Die faschistische Fraktion;;;;;;;;;;;
 KHI_absolute_monarchy;The Khanate of Khiva;;;;;;;;;;;;;
+KKP_absolute_monarchy;Karakalpakstan;;;;;;;;;;;;;
 KKP_absolute_monarchy;The Karakalpak Khanate;;;;;;;;;;;;;
+KKP_prussian_constitutionalism;The Karakalpak Khanate;;;;;;;;;;;;;
+KKP_hms_government;The Karakalpak Khanate;;;;;;;;;;;;;
 BUK_absolute_monarchy;The Emirate of Bukhara;;;;;;;;;;;;;
+BUK_absolute_monarchy;The Emirate of Bukhara;;;;;;;;;;;;;
+BUK_prussian_constitutionalism;The Emirate of Bukhara;;;;;;;;;;;;;
+BUK_hms_government;The Emirate of Bukhara;;;;;;;;;;;;;
 KOK_absolute_monarchy;The Khanate of Kokand;;;;;;;;;;;;;
+KOK_prussian_constitutionalism;The Khanate of Kokand;;;;;;;;;;;;;
+KOK_hms_government;The Khanate of Kokand;;;;;;;;;;;;;
 KAZ;Kazakhstan;;;;;;;;;;;;;
 KAZ_ADJ;Kazakh;;;;;;;;;;;;;
 KAZ_absolute_monarchy_ADJ;Middle Kazakh;;;;;;;;;;;;;
