Reworked Russian Central Asia
-Russia can't form Turkestan as a puppet anymore
-Russia has an autdep on KAZ now
-Reworked "Hegemony over Central Asia" decision for Russia

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -604,6 +604,7 @@ YAK_colonial_company_4;Yakuto Jichi-Ku;;;;;;;;;;;;;
 GRE_colonial_company_4;Regno di Grecia;;;;;;;;;;;;;
 FIN_colonial_company_4;Hertigdömet Finland;;;;;;;;;;;;;
 KRL_colonial_company_3;Hertigdömet Karelen;;;;;;;;;;;;;
+KAZ_colonial_company;Stepnoye General-Gubernatorstvo;;;;;;;;;;;;;
 KHI_colonial_company_4;Khivinskoye Khanstvo;;;;;;;;;;;;;
 BUK_colonial_company_4;Bukharskiy Emirat;;;;;;;;;;;;;
 CLC_colonial_company;Cilicia;;;;;;;;;;;;;
