--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -224,3 +224,4 @@ PROV4138;Tamshybulak;;;;;;;;;;;;;
 PROV4139;Tsarkent;;;;;;;;;;;;;
 PROV4140;Alty-Kuduk;;;;;;;;;;;;;
 PROV4141;Turgay;;;;;;;;;;;;;
+PROV4195;Ura Tepe;;;;;;;;;;;;;
