Shortening the name

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -4435,9 +4435,9 @@ MUTANFIQ_adical;Radical Faction;;;;;;;;;;;;;
 MUTANFIQ_socialist;Socialist Faction;;;;;;;;;;;;;
 MUTANFIQ_communist;Communist Faction;;;;;;;;;;;;;
 MUTANFIQ_fascist;Fascist Faction;;;;;;;;;;;;;
-PLS_absolute_empire;The Emirate of Muhammara;;;;;;;;;;;;;
-PLS_semi_constitutional_empire;The Emirate of Muhammara;;;;;;;;;;;;;
-PLS_constitutional_empire;The Emirate of Muhammara;;;;;;;;;;;;;
+PLS_absolute_empire;The Muhammara Emirate;;;;;;;;;;;;;
+PLS_semi_constitutional_empire;The Muhammara Emirate;;;;;;;;;;;;;
+PLS_constitutional_empire;The Muhammara Emirate;;;;;;;;;;;;;
 PLS_absolute_empire_ADJ;Kaabi;;;;;;;;;;;;;
 PLS_semi_constitutional_empire_ADJ;Kaabi;;;;;;;;;;;;;
 PLS_constitutional_empire_ADJ;Kaabi;;;;;;;;;;;;;
