British "Reorg" of Arabia

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -517,7 +517,7 @@ ALB_colonial_company;Albania;;;;;;;;;;;;;
 ALB_colonial_company_2;Albanie;;;;;;;;;;;;;
 ALB_colonial_company_3;Albanien;;;;;;;;;;;;;
 ALB_colonial_company_4;Protettorato d'Albania;;;;;;;;;;;;;
-NEJ_colonial_company;Protectorate of Nejd;;;;;;;;;;;;;
+NEJ_colonial_company;Protectorate of Arabia;;;;;;;;;;;;;
 NYE_colonial_company;North Yemen;;;;;;;;;;;;;
 NYE_colonial_company_2;Nord-Yémen;;;;;;;;;;;;;
 NYE_colonial_company_3;Nord-Jemen;;;;;;;;;;;;;
