--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -607,6 +607,7 @@ KRL_colonial_company_3;Hertigdömet Karelen;;;;;;;;;;;;;
 KAZ_colonial_company;Stepnoye General-Gubernatorstvo;;;;;;;;;;;;;
 KHI_colonial_company_4;Khivinskoye Khanstvo;;;;;;;;;;;;;
 BUK_colonial_company_4;Bukharskiy Emirat;;;;;;;;;;;;;
+KYR_colonial_company;Dikokamennaya Orda;;;;;;;;;;;;;
 CLC_colonial_company;Cilicia;;;;;;;;;;;;;
 CLC_colonial_company_2;Cilicie;;;;;;;;;;;;;
 CLC_colonial_company_3;Kilikien;;;;;;;;;;;;;
