--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -771,3 +771,4 @@ UKR_constitutional_empire;The Ruthenian Empire;;;;;;;;;;;;;
 UKR_absolute_empire_ADJ;Ruthenian;;;;;;;;;;;;;
 UKR_semi_constitutional_empire_ADJ;Ruthenian;;;;;;;;;;;;;
 UKR_constitutional_empire_ADJ;Ruthenian;;;;;;;;;;;;;
+EVTDESC31502007;The Baltic provinces have submitted to our integration.;;;;;;;;;;;;;
