--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -608,6 +608,7 @@ KAZ_colonial_company;Stepnoye General-Gubernatorstvo;;;;;;;;;;;;;
 KHI_colonial_company_4;Khivinskoye Khanstvo;;;;;;;;;;;;;
 BUK_colonial_company_4;Bukharskiy Emirat;;;;;;;;;;;;;
 KYR_colonial_company;Dikokamennaya Orda;;;;;;;;;;;;;
+TKM_colonial_company;Zakaspiyskaya Oblast;;;;;;;;;;;;;
 CLC_colonial_company;Cilicia;;;;;;;;;;;;;
 CLC_colonial_company_2;Cilicie;;;;;;;;;;;;;
 CLC_colonial_company_3;Kilikien;;;;;;;;;;;;;
