--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -609,6 +609,7 @@ KHI_colonial_company_4;Khivinskoye Khanstvo;;;;;;;;;;;;;
 BUK_colonial_company_4;Bukharskiy Emirat;;;;;;;;;;;;;
 KYR_colonial_company;Dikokamennaya Orda;;;;;;;;;;;;;
 TKM_colonial_company;Zakaspiyskaya Oblast;;;;;;;;;;;;;
+KOK_colonial_company_4;Vladuichestvo Turkestana;;;;;;;;;;;;;
 CLC_colonial_company;Cilicia;;;;;;;;;;;;;
 CLC_colonial_company_2;Cilicie;;;;;;;;;;;;;
 CLC_colonial_company_3;Kilikien;;;;;;;;;;;;;
