--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -4100,7 +4100,7 @@ BUG_semi_constitutional_empire_ADJ;Chwezi;;;;;;;;;;;;;
 KYR_absolute_monarchy;The Kara-Kyrgyz Khanate;;;;;;;;;;;;;
 KYR_prussian_constitutionalism;The Kara-Kyrgyz Khanate;;;;;;;;;;;;;
 KYR_hms_government;The Kara-Kyrgyz Khanate;;;;;;;;;;;;;
-KYR_prov_gov_conservative;The Arkalik Confederation;;;;;;;;;;;;;
+KYR_prov_gov_conservative;The Tagay Confederation;;;;;;;;;;;;;
 KYR_absolute_monarchy_ADJ;Kara-Kyrgyz;;;;;;;;;;;;;
 KYR_prussian_constitutionalism_ADJ;Kara-Kyrgyz;;;;;;;;;;;;;
 KYR_hms_government_ADJ;Kara-Kyrgyz;;;;;;;;;;;;;
