--- a/GFM/localisation/00_PDM_events.csv
+++ b/GFM/localisation/00_PDM_events.csv
@@ -444,7 +444,7 @@ new_capital_in_the_east_title;A New Capital in the East;;;;;;;;;;;;;
 new_capital_in_the_east_desc;We will create a new capital for Japan in the city of Edo, giving it a new name and building it into a glorious place that will show the world that Japan is a power to be reckoned with.;;;;;;;;;;;;;
 unite_with_moldavia_title;Unite with Moldavia;;;;;;;;;;;;;
 unite_with_moldavia_desc;The Romanian peoples must stand together as one nation, now and forever more. Together we shall forge a new destiny and reclaim the lands that have been taken from us over the centuries.;;;;;;;;;;;;;
-leave_soi_title;We Will Stand on our Own;;;;;;;;;;;;;
+leave_soi_title;We Will Stand On Our Own;;;;;;;;;;;;;
 leave_soi_desc;Too long have we bent knee to unwanted foreigners. We must prove to them that our nation is a power to be reckoned with, and reject their influence within our nation.;;;;;;;;;;;;;
 purge;Purge the Traitors;;;;;;;;;;;;;
 purge_desc;The proletarian state has many enemies, ones that do not see the larger plan and how it benefits us all. We must locate them and keep them from harming our nation.;;;;;;;;;;;;;
