long live ardalan

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -4407,6 +4407,12 @@ KTH_constitutional_empire;Gharama;;;;;;;;;;;;;
 KTH_absolute_empire_ADJ;Gharami;;;;;;;;;;;;;
 KTH_semi_constitutional_empire_ADJ;Gharami;;;;;;;;;;;;;
 KTH_constitutional_empire_ADJ;Gharami;;;;;;;;;;;;;
+RDL_absolute_empire;Ardalan;;;;;;;;;;;;;
+RDL_semi_constitutional_empire;Ardalan;;;;;;;;;;;;;
+RDL_constitutional_empire;Ardalan;;;;;;;;;;;;;
+RDL_absolute_empire_ADJ;Ardalani;;;;;;;;;;;;;
+RDL_semi_constitutional_empire_ADJ;Ardalani;;;;;;;;;;;;;
+RDL_constitutional_empire_ADJ;Ardalani;;;;;;;;;;;;;
 KHL_absolute_empire;Zirqan;;;;;;;;;;;;;
 KHL_semi_constitutional_empire;Zirqan;;;;;;;;;;;;;
 KHL_constitutional_empire;Zirqan;;;;;;;;;;;;;
