I have betrayed everyone, I also betray myself

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -654,3 +654,4 @@ RHI_colonial_company_2;Protectorat de Rhénanie;;;;;;;;;;;;;
 WES_colonial_company_2;Westphalie;;;;;;;;;;;;;
 CRI_colonial_company;Tavricheskaya;;;;;;;;;;;;;
 CRI_colonial_company_3;Krim-Grenzregierung;;;;;;;;;;;;;
+RGS_colonial_company_2;San Pedro;;;;;;;;;;;;;
