--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -223,5 +223,5 @@ PROV4137;Mirki;;;;;;;;;;;;;
 PROV4138;Tamshybulak;;;;;;;;;;;;;
 PROV4139;Tsarkent;;;;;;;;;;;;;
 PROV4140;Alty-Kuduk;;;;;;;;;;;;;
-PROV4141;Turgay;;;;;;;;;;;;;
+PROV4141;Kush-Murun;;;;;;;;;;;;;
 PROV4195;Ura Tepe;;;;;;;;;;;;;
