rahhhh go my puppet swarm

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -233,7 +233,7 @@ LUB;Lubeck;;;;;;;;;
 PTR;Principality of Trinidad;;;;;;;;;
 PTR_ADJ;Trinidadian;;;;;;;;;
 BOL_colonial_company;Grã-ducado de Charcas;;;;;;;;;
-BOL_colonial_company_2;Alto Peru;;;;;;;;;
+BOL_colonial_company_2;Alto Perú;;;;;;;;;
 BOL_colonial_company_3;Department of Bolívar;;;;;;;;;
 CHL_colonial_company;State of Chile;;;;;;;;;
 PZN_colonial_company;Großherzogtum Posen;;;;;;;;;
