--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1315,7 +1315,7 @@ ORA_2103;Basutoland;;;;;;;;;;;;;
 ZUL_2113;Zululand;;;;;;;;;;;;;
 CAN_19;New Caledonia;;;;;;;;;;;;;
 PEU_2308;Arica;;;;;;;;;;;;;
-BOL_2309;Antofagasta;;;;;;;;;;;;;
+BOL_2309;Atacama;;;;;;;;;;;;;
 ARG_2360;Mesopotamia;;;;;;;;;;;;;
 ENG_1251;West Bengal;;;;;;;;;;;;;
 ENG_1252;East Bengal;;;;;;;;;;;;;
@@ -1360,7 +1360,7 @@ PEU_2289;Oriente;;;;;;;;;;;;;
 POR_2060;Moçambique;;;;;;;;;;;;;
 POR_2049;Gaza;;;;;;;;;;;;;
 CHL_2327;Concepción;;;;;;;;;;;;;
-CHL_2332;Zona Austral;;;;;;;;;;;;;
+CHL_2332;Patagonia occidental;;;;;;;;;;;;;
 CHL_2322;Santiago;;;;;;;;;;;;;
 CHI_1082;Kwanwai;;;;;;;;;;;;;
 NEJ_1160;Ha'il;;;;;;;;;;;;;
