--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -655,5 +655,7 @@ WES_colonial_company_2;Westphalie;;;;;;;;;;;;;
 CRI_colonial_company;Tavricheskaya;;;;;;;;;;;;;
 CRI_colonial_company_3;Krim-Grenzregierung;;;;;;;;;;;;;
 RGS_colonial_company_2;San Pedro;;;;;;;;;;;;;
+RGS_colonial_company_2_ADJ;Sampedrino;;;;;;;;;;;;;
 URU_colonial_company_3;Provincia Oriental;;;;;;;;;;;;;
+URU_colonial_company_3_ADJ;Oriental;;;;;;;;;;;;;
 PRG_colonial_company_2;Provincia del Paraguay;;;;;;;;;;;;;
