join the swarm join the swarm join the

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -659,3 +659,7 @@ RGS_colonial_company_2_ADJ;Sampedrino;;;;;;;;;;;;;
 URU_colonial_company_3;Provincia Oriental;;;;;;;;;;;;;
 URU_colonial_company_3_ADJ;Oriental;;;;;;;;;;;;;
 PRG_colonial_company_2;Provincia del Paraguay;;;;;;;;;;;;;
+PEU_colonial_company_2;Régimen de los Departamentos Libres;;;;;;;;;;;;;
+SPU_colonial_company_2;Provincia del Cuzco;;;;;;;;;;;;;
+SPU_colonial_company_2_ADJ;Cuzcoan;;;;;;;;;;;;;
+CHL_colonial_company_2;Provincias de Chile;;;;;;;;;;;;;
