Greater Mongolia claims reworked

--- a/GFM/localisation/FlavoursMod_decisions.csv
+++ b/GFM/localisation/FlavoursMod_decisions.csv
@@ -821,7 +821,7 @@ economic_malaise_desc;We have recently denied private investment, and investors 
 recently_lost_war;War recently lost;;;;;;;;;;;;;
 recently_lost_war_desc;We have lost a war in the last 5 years.;;;;;;;;;;;;;
 Mongol_claims_title;Mongol Claims;;;;;;;;;;;;;
-Mongol_claims_desc;§RGain 10 infamy§! With our newfound power, we can now internationally claim land that is rightfully ours!;;;;;;;;;;;;;
+Mongol_claims_desc;§RGain 20 infamy§! With our newfound power, we can expand our state across the great steppe, reclaiming the lands of the old Chagatai and Jochi Ulus!;;;;;;;;;;;;;
 had_arch_exhibition;Had Archaeology Exhibition;;;;;;;;;;;;;
 Chile_join_PBC_title;Chile in the Federation;;;;;;;;;;;;;
 Chile_join_PBC_desc;Chile is culturally similar to us and the key to mastering control of the Andes mountains. Inviting them to join us will cement our dominance in South America!;;;;;;;;;;;;;
