--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10498,7 +10498,7 @@ PROV2336;Te Pito o te Henua;Te Pito o te Henua;Te Pito o te Henua;;Te Pito o te 
 PROV2337;Yexwase' Yamelkyet;Yexwase' Yamelkyet;Yexwase' Yamelkyet;;Yexwase' Yamelkyet;;;;;;;;;
 PROV2338;Puerto Guaraní;Puerto Guarani;Puerto Guarani;;Puerto Guaraní;;;;;;;;;
 PROV2339;Asuncion;Asunción;Asuncion;;Asunción;;;;;;;;;
-PROV2340;Pilar;Pilar;Pilar;;Pilar;;;;;;;;;
+PROV2340;Humaitá;Humaitá;Humaitá;;Humaitá;;;;;;;;;
 PROV2341;Villarrica;Villarrica;Villarrica;;Villarrica;;;;;;;;;
 PROV2342;San Pedro;San Pedro;San Pedro;;San Pedro;;;;;;;;;
 PROV2343;Belén;Belén;Belén;;Belén;;;;;;;;;
