Wake up honey, more Chilean-Argentinian province disputes

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1228,6 +1228,7 @@ PROV4204;São José;;;;;;;;;
 PROV4205;Rio Branco;;;;;;;;;
 PROV4206;Ponta Grossa;;;;;;;;;
 PROV4207;Shahrisabz;;;;;;;;;
+PROV4208;Kehek Aike;;;;;;;;;;;;;
 PRG_2338;Chaco Boreal;;;;;;;;;;;;;
 ARG_2377;Chaco Austral;;;;;;;;;;;;;
 ARG_2366;Chaco Central;;;;;;;;;;;;;
