--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1013,7 +1013,7 @@ PROV3946;Oristano;;;;;;;;;;;;;
 PROV3947;Dolores;;;;;;;;;;;;;
 PROV3948;K'la-Rome-Kó;;;;;;;;;;;;;
 PROV3949;Chod-Malal;;;;;;;;;;;;;
-PROV3950;I-Keu-Kenk;;;;;;;;;;;;;
+PROV3950;Kaiken Aike;;;;;;;;;;;;;
 PROV3951;Sululta;;;;;;;;;;;;;
 PROV3952;Buri;;;;;;;;;;;;;
 PROV3953;Dallol;;;;;;;;;;;;;
@@ -1228,7 +1228,7 @@ PROV4204;São José;;;;;;;;;
 PROV4205;Rio Branco;;;;;;;;;
 PROV4206;Ponta Grossa;;;;;;;;;
 PROV4207;Shahrisabz;;;;;;;;;
-PROV4208;Kehek Aike;;;;;;;;;;;;;
+PROV4208;I-Keu-Kenk;;;;;;;;;;;;;
 PRG_2338;Chaco Boreal;;;;;;;;;;;;;
 ARG_2377;Chaco Austral;;;;;;;;;;;;;
 ARG_2366;Chaco Central;;;;;;;;;;;;;
