--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -663,3 +663,7 @@ PEU_colonial_company_2;Régimen de los Departamentos Libres;;;;;;;;;;;;;
 SPU_colonial_company_2;Provincia del Cuzco;;;;;;;;;;;;;
 SPU_colonial_company_2_ADJ;Cuzcoan;;;;;;;;;;;;;
 CHL_colonial_company_2;Provincias de Chile;;;;;;;;;;;;;
+CRT_colonial_company_2;Provincia de Corrientes;;;;;;;;;;;;;
+CRT_colonial_company_2_ADJ;Correntino;;;;;;;;;;;;;
+ENT_colonial_company_2;Provincia de Entre Rios;;;;;;;;;;;;;
+ENT_colonial_company_2_ADJ;Entrerriano;;;;;;;;;;;;;
