--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -58,7 +58,7 @@ EVTDESC971601;\n\nOur theory regarding the borders of $COUNTRY$ in Patagonia has
 EVTDESC971611;\n\nThe arbitration has decided against our rightful claims, and we are forced to abandon the entire region.;;;;;;;;;;;;;
 EVTDESC97162;\n\nThe arbitration concluded on establishing a compromise between both theories, granting roughly half of the land to both parties.;;;;;;;;;;;;;
 EVTDESC97098;\n\nDue to the recent decline in the wool market, rural workers from the Argentine Regional Worker's Federation in Rio Gallegos decided to go on strike, and a large quantity of them were killed during said strike's repression.;;;;;;;;;;;;;
-EVTDESC97106;\n\nNow that we have established a united Platinean nation, it is time to decide a proper capital. A few proposals for it have come forward for suitable cities, now it's only a matter of choosing one.;;;;;;;;;;;;;
+ARGCHOOSECAPITAl;\n\nNow that we have established a united Platinean nation, it is time to decide a proper capital. A few proposals for it have come forward for suitable cities, now it's only a matter of choosing one.;;;;;;;;;;;;;
 EVTDESC97107;\n\nIn August 27, a group of young $COUNTRY_ADJ$ entrepreneurs began the world's first regular radio broadcasting with a live performance of Richard Wagner's opera Parsifal in downtown Buenos Aires, setting the precedent for many more radio programs to come.;;;;;;;;;;;;;
 EVTDESC629;\n\nVienna has ordered our army disbanded, effectively ending the National Council.;;;;;;;;;;;;;
 EVTDESC630;\n\nVienna has decided to keep us autonomous... for now.;;;;;;;;;;;;;
