--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -667,3 +667,5 @@ CRT_colonial_company_2;Provincia de Corrientes;;;;;;;;;;;;;
 CRT_colonial_company_2_ADJ;Correntino;;;;;;;;;;;;;
 ENT_colonial_company_2;Provincia de Entre Rios;;;;;;;;;;;;;
 ENT_colonial_company_2_ADJ;Entrerriano;;;;;;;;;;;;;
+CRT_colonial_company_3;Protectorate of Mesopotamia;;;;;;;;;;;;;
+CRT_colonial_company_4;Protectorat de Mésopotamie;;;;;;;;;;;;;
