--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -311,6 +311,8 @@ PAK_fascist;Jamaat Ahle Sunnat;;;;;;;;;;;;;
 PAK_reactionary;Jamiat Ulema-e-Islam;;;;;;;;;;;;;
 RDL;Zabarama;;;;;;;;;;;;;
 RDL_ADJ;Zarma;;;;;;;;;;;;;
+MKR;Maragheh;;;;;;;;;;;;;
+MKR_ADJ;Moqqadami;;;;;;;;;;;;;
 CRL;Chitral;;;;;;;;;;;;;
 CRL_ADJ;Chitrali;;;;;;;;;;;;;
 LMA;Ufipa;;;;;;;;;;;;;
