--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -252,7 +252,7 @@ PROV1082;Haishenwai;;;;;;;;;;;;;
 PROV1085;Hailanpao;;;;;;;;;;;;;
 PROV1087;Otomari;;;;;;;;;;;;;
 PROV1091;Tskhinval;;;;;;;;;;;;;
-PROV1110;Çehrîqê Jorîn;;;;;;;;;;;;;
+PROV1110;Pîransar;;;;;;;;;;;;;
 PROV1117;Sinne;;;;;;;;;;;;;
 PROV1118;Saqqez;;;;;;;;;;;;;
 PROV1119;Kermanshah;;;;;;;;;;;;;
@@ -554,7 +554,7 @@ PROV3296;Kipula;;;;;;;;;;;;;
 PROV3297;Old Shanghai;;;;;;;;;;;;;
 PROV3298;Kanbakty;;;;;;;;;;;;;
 PROV3299;Aksai Chin;;;;;;;;;;;;;
-PROV3300;Dayr al-Zawr;;;;;;;;;;;;;
+PROV3300;Bijar;;;;;;;;;;;;;
 PROV3301;Mudanya;;;;;;;;;;;;;
 PROV3302;Kirklareli;;;;;;;;;;;;;
 PROV3303;Tsarevo;;;;;;;;;;;;;
@@ -1051,7 +1051,7 @@ PROV3984;Iwalatan;;;;;;;;;;;;;
 PROV3985;Bakel;;;;;;;;;;;;;
 PROV3986;Tottori;;;;;;;;;;;;;
 PROV3987;Ayn Issa;;;;;;;;;;;;;
-PROV3988;Samarra;;;;;;;;;;;;;
+PROV3988;Qerqelî;;;;;;;;;;;;;
 PROV3989;as-Samawah;;;;;;;;;;;;;
 PROV3990;Salwa;;;;;;;;;;;;;
 PROV3991;Bishah;;;;;;;;;;;;;
