Maraqeh and Urmia setup
Urmia is lumped in with Maraqeh until we reach a consensus on how they should disappear.

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -554,7 +554,7 @@ PROV3296;Kipula;;;;;;;;;;;;;
 PROV3297;Old Shanghai;;;;;;;;;;;;;
 PROV3298;Kanbakty;;;;;;;;;;;;;
 PROV3299;Aksai Chin;;;;;;;;;;;;;
-PROV3300;Bijar;;;;;;;;;;;;;
+PROV3300;Bicar Gerrus;;;;;;;;;;;;;
 PROV3301;Mudanya;;;;;;;;;;;;;
 PROV3302;Kirklareli;;;;;;;;;;;;;
 PROV3303;Tsarevo;;;;;;;;;;;;;
