A salty surprise (for argentines)

--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -135,6 +135,10 @@ AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_IBR;The Spanish-Colombian War;
 NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_SPA;The Spanish-Colombian War;;;;;;;;;;;;;
 NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_SPC;The Spanish-Colombian War;;;;;;;;;;;;;
 NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_IBR;The Spanish-Colombian War;;;;;;;;;;;;;
+AGGRESSION_SCRIPTED_WAR_MINISCULE_LPL_USA;The Falklands Crisis;;;;;;;;;;;;;
+AGGRESSION_SCRIPTED_WAR_MINISCULE_ARC_USA;The Falklands Crisis;;;;;;;;;;;;;
+NORMAL_SCRIPTED_WAR_SMALL_LPL_USA;The Falklands Crisis;;;;;;;;;;;;;
+NORMAL_SCRIPTED_WAR_SMALL_ARC_USA;The Falklands Crisis;;;;;;;;;;;;;
 greater_colombia;Uniting the Andes;;;;;;;;;;;;;
 greater_colombia_desc; We have united a majority of our Hispanic American brethren into one nation, as the founding fathers had envisioned.;;;;;;;;;;;;;
 andean_civil_war; The Andean Brother's War;;;;;;;;;;;;;
@@ -180,6 +184,9 @@ Colombian_Caribbean_Ambitions;In order to compete with the powers that be, Colom
 62023_desc;\n\nThe war is over. Mexico has once again been defeated. This was not just a victory by a single country, nor a single idea, nor even a single culture. Rio Grande has shown the world that we will not be silenced by aggression! Now that we've won, imagine what else we can accomplish?;;;;;;;;;;;;;
 62024_desc;\n\nIn a defeat worse in scale than that of the Texan revolution, Mexico is faced with international embarrassment. Rio Grande not only secured total independence, but brought the United States and others down upon us. During negotiations, many concessions were given to both nations, and Mexico had to once again bend the knee.;;;;;;;;;;;;;
 620255_desc;\n\nIn the late 1910s to the 1930s, American farmers began reporting the emergence of a new and destructive insect, the Black and Red Imported Fire Ant (BIFA & RIFA). Hailing from South America, these ants became notorious for their venomous stings as well as destruction to farmland, housing and machinery due to their nesting habits and rapid expansion. Likely introduced via global sea trade, both Solenopsis Richteri and Invicta represent one of the earliest contemporary accounts of invasive species that were accidentally introduced by human activity. The United States government would slowly attempt to eradicate these ants, dumping millions of dollars into operations and pesticides across the lands. With no natural predators and extreme adaptability, fire ants would go on to spread across North America and the Caribbean.;;;;;;;;;;;;;
+620256_desc;The Falklands Expedition occured in late 1831 when the United States dispatched warship USS Lexington to investigate the seizure of several whaling vessels by Argentine Merchant Luis Vernet of Puerto Luis. The Platinean claim on the islands were contentious, and due to this these independent ships refused to recognize Argentine sovereignty. Upon finding weapons outfitted to the seized ships, US Captain Silas Duncan arrested six Argentine Officers on the charge of piracy. In the chaos of the situation, both sides claimed the other had taken unfriendly and aggressive actions. This resulted in Argentine warships challenging American vessels in the region, prompting the American consul to seriously consider a punitive expedition against the fledging South American country. This showdown would be pretense for the British to seize the islands and assert sovereignty.;;;;;;;;;;;;;
+620257_desc;We have defeated the Argentines in a decisive manner and the Falkland islands now belong to us!;;;;;;;;;;;;;
+620258_desc;We have defeated the American navy and held the Malvinas. The world must recognize Argentine sovereignty over the South Atlantic!!;;;;;;;;;;;;;
 rgr_vs_mex; War of Mexican Aggression;;;;;;;;;;;;;
 rgr_destiny_decided; Rio Grande's destiny decided.;;;;;;;;;;;;;
 RGR_Free;A Free Rio Grande!;;;;;;;;;;;;;
