Irredentism in La Plata

--- a/GFM/localisation/0000Sitka.csv
+++ b/GFM/localisation/0000Sitka.csv
@@ -78,8 +78,8 @@ Accept_Georgians_title;Accept the Georgians;;;;;;;;;;;;;
 Accept_Georgians_desc;Despite differences in language and religion, the Georgians are not so different from us - their old royal dynasty, the Bagratids, even has Armenian origins. It would bring stability to our lands if we accepted them as citizens, though it will hurt our prestige to accept another culture.;;;;;;;;;;;;;
 Claim_KDS_title;Greater Kurdistan;;;;;;;;;;;;;
 Claim_KDS_desc;§RGain 14 infamy§! Now that we have secured our core lands we must strive to achieve a truly noble vision: All Kurds must be united in a greater Kurdish state.;;;;;;;;;;;;;
-Claim_URU_title;Greater Uruguay;;;;;;;;;;;;;
-Claim_URU_desc;§RGain 10 infamy§! To achieve true power we must expand. The provinces of Corrientes, Entre Rios, Rio Grande do Sul and Santa Catarina have expressed a desire to leave their respective countries and join a greater Uruguayan state.;;;;;;;;;;;;;
+Claim_URU_title;Declare the Uruguayan Federation;;;;;;;;;;;;;
+Claim_URU_desc;§RGain 10 infamy§! The idea of a state unifying both sides of the Uruguay River is hardly a new one. The League of the Free Peoples under Artigas was a clear example of that and, during the Big War, due to Rivera's expeditions to Mesopotamia and connections to the Farrapos in Southern Brazil, the Colorado founder brought back the idea of an independent federal state to unify Corrientes, Entre Rios, Rio Grande do Sul and Uruguay. Now, regardless of what our current government thinks of Rivera and his plans, we can't deny that such a plan—while risky—could guarantee a better position to Uruguay between the two giants it has for neighbors.;;;;;;;;;;;;;
 Claim_YEM_title;Claim Dhofar;;;;;;;;;;;;;
 Claim_YEM_desc;§RGain 1 infamy§! Dhofar is currently part of Muscat-Oman, yet it has the same people as our country. Why shouldn't we claim it?;;;;;;;;;;;;;
 Claim_OMA_title;Claim Trucial Oman;;;;;;;;;;;;;
