new bolivian prov

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -295,7 +295,7 @@ PROV1644;Meakan;;;;;;;;;;;;;
 PROV1679;Amami;;;;;;;;;;;;;
 PROV1696;Tarfaya;;;;;;;;;;;;;;
 PROV1709;Bône;;;;;;;;;;;;;
-PROV1714;Caraparí;;;;;;;;;;;;;
+PROV1714;Yacuy-ighba;;;;;;;;;;;;;
 PROV1724;Shetland;;;;;;;;;;;;;
 PROV1738;al-Jaghbub;;;;;;;;;;;;;
 PROV1742;Wath;;;;;;;;;;;;;
@@ -1229,6 +1229,7 @@ PROV4205;Rio Branco;;;;;;;;;
 PROV4206;Ponta Grossa;;;;;;;;;
 PROV4207;Shahrisabz;;;;;;;;;
 PROV4208;I-Keu-Kenk;;;;;;;;;;;;;
+PROV4209;I-Oso-Oso;;;;;;;;;;;;;
 PRG_2338;Chaco Boreal;;;;;;;;;;;;;
 ARG_2377;Chaco Austral;;;;;;;;;;;;;
 ARG_2366;Chaco Central;;;;;;;;;;;;;
